# RTEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Source/: main.cpp
Source/Core/: GeneratorTest.cpp  GeneratorTest.h  PreDefines.h
Source/Core/Math/: AABB.h  Line.h  MathUtil.h  OBB.h  Plane.h  Ray.h  Sphere.h  Triangle.h
Tests/: MathTest.cpp
ThirdPartys/Catch2/: catch.hpp
